[package]
name = "syncthing_relay_server_ips"
version = "0.1.0"
edition = "2021"

[lib]
name = "syncthing_relay_server_ips"
path = "./src/main.rs"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.21.0", features = ["full"] }