[package]
name = "syncthing_relay_server_ips"
version = "0.1.0"
edition = "2021"

[lib]
name = "syncthing_relay_server_ips"
path = "./src/main.rs"

[dependencies]
futures = "0.3.30"
reqwest = { version = "0.13.0", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }